[gd_scene load_steps=9 format=3 uid="uid://dbe6ybprf7461"]

[ext_resource type="Script" uid="uid://ce4rp23jh71d" path="res://Overworld/Enemy/enemy.gd" id="1_kq251"]
[ext_resource type="Script" uid="uid://dqnaoigdp4v72" path="res://Overworld/Enemy/state_machine.gd" id="3_aqlo4"]
[ext_resource type="PackedScene" uid="uid://vvnj7urn8vgj" path="res://Overworld/Enemy/Enemy_battle_transition.tscn" id="3_d8m0o"]
[ext_resource type="Script" uid="uid://bdnid4se5o5g6" path="res://Overworld/Enemy/enemy_idle.gd" id="5_0koic"]
[ext_resource type="Script" uid="uid://dfsb0smqvyean" path="res://Overworld/Enemy/enemy_chase.gd" id="5_3cc1d"]
[ext_resource type="Script" uid="uid://bpqgfpif05wjs" path="res://Overworld/Enemy/enemy_attack.gd" id="5_anksf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dh6km"]
size = Vector2(70, 62)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_8q01u"]
load_path = "res://.godot/imported/cyclops_sprite.png-1805becf3c178a391d63e9a69991f737.ctex"

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(224, 88)
script = ExtResource("1_kq251")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_dh6km")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 1)
scale = Vector2(1.25, 1.25)
texture = SubResource("CompressedTexture2D_8q01u")
metadata/_edit_group_ = true

[node name="detection_zone" parent="." groups=["enemy"] instance=ExtResource("3_d8m0o")]
position = Vector2(-1, -4)
scale = Vector2(5.19215, 3.52286)
collision_layer = 2
collision_mask = 2
metadata/_edit_group_ = true

[node name="State_Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_aqlo4")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="State_Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_0koic")
enemy = NodePath("../..")
metadata/_custom_type_script = "uid://bdnid4se5o5g6"

[node name="Attack" type="Node" parent="State_Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_anksf")
enemy = NodePath("../..")
metadata/_custom_type_script = "uid://bpqgfpif05wjs"

[node name="Chase" type="Node" parent="State_Machine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_3cc1d")
enemy = NodePath("../..")
metadata/_custom_type_script = "uid://dfsb0smqvyean"

[connection signal="body_entered" from="detection_zone" to="State_Machine/Chase" method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="detection_zone" to="State_Machine/Chase" method="_on_detection_zone_body_exited"]
